Fix spelling errors and update brand name to 'Amazon'
Updated the HTML content to correct spelling errors and improve brand consistency.

--- a/pj.html
+++ b/pj.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Amazone</title>
+    <title>Amazon</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel = "stylesheet" href="pj.css">
 </head>
@@ -26,7 +26,7 @@
                 <select class = "search-select">
                     <option>All</option>
                 </select>
-                <input placeholder="Search Amazone.in" class = "search-input">
+                <input placeholder="Search Amazon.in" class = "search-input">
                 <div class = "search-icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                  </div>
@@ -63,7 +63,7 @@
                      <p>Sell</p>
                      <p>Fashion</p>
                      <p>New Release</p>
-                     <p>Amazone Pay</p>
+                     <p>Amazon Pay</p>
                     
                 </div>
                  <div class = "panel-deals">
@@ -74,7 +74,7 @@
     </header>
     <div class = "hero-section">
         <div class="hero-msg">
-            <p>yor are on amazone.com. you can also shop on Amazone India for millions of products with fast local delivery.<a>click here to go to amazone.in</a></p>
+            <p>you are on amazon.com. you can also shop on Amazon India for millions of products with fast local delivery.<a>click here to go to amazon.in</a></p>
      </div>
      </div>
 
@@ -148,11 +148,11 @@
             <p>Get to know us</p>
             <a>Careers</a>
             <a>Blog</a>
-            <a>About Amazone</a>
+            <a>About Amazon</a>
             <a>Sustainability</a>
             <a>Press Center</a>
             <a>Investor Relations</a>
-            <a>Amazone Cares</a>
+            <a>Amazon Cares</a>
  </ul>
         <ul>
             <p>Connect with us</p>
@@ -162,25 +162,25 @@
     </ul>
         <ul>
             <p>Make Money with Us</p>
-            <a>Sell on Amazone</a>
-            <a>Sell under Amazone Accelerator</a>
+            <a>Sell on Amazon</a>
+            <a>Sell under Amazon Accelerator</a>
             <a>Protect and Build Your Brand</a>
-            <a>Amazone Global Selling</a>
-            <a>Amazone Pay on Merchants</a>
+            <a>Amazon Global Selling</a>
+            <a>Amazon Pay on Merchants</a>
             <a>Become an Affiliate</a>
-            <a>Fulfilment by Amazone</a>
-            <a>Amazone Handmade</a>
+            <a>Fulfilment by Amazon</a>
+            <a>Amazon Handmade</a>
             <a>Advertise Your Products</a>
-            <a>Amazone Pay</a>
+            <a>Amazon Pay</a>
     </ul>
         <ul>
             <p>Let Us Help You</p>
-            <a>COVID-19 and Amazone</a>
+            <a>COVID-19 and Amazon</a>
             <a>Your Account</a>
             <a>Returns Centre</a>
             <a>100% Purchase Protection</a>
-            <a>Amazone App Download</a>
-            <a>Amazone Assistant Download</a>
+            <a>Amazon App Download</a>
+            <a>Amazon Assistant Download</a>
             <a>Help</a>
         </ul>
 
@@ -196,11 +196,12 @@
             <a>Conditions of use</a>
             <a>Privacy Policy</a>
             <a>Interest-Based Ads</a>
-            <a>© 1996-2024, Amazone.com, Inc. or its affiliates</a>
+            <a>© 1996-2024, Amazon.com, Inc. or its affiliates</a>
         </div>
-        <div class = "copyright"> 1996-2023, Amazone.com, Inc. or its affiliates</div>
+        <div class = "copyright"> 1996-2023, Amazon.com, Inc. or its affiliates</div>
     </div>
 </footer>
 
 </body>
+
 </html>
